+ Added savepoint support to ATK DB layer (only supported
  when using one of the OCI drivers for now). [Peter]
+ Added support for postMeta function which will be called after
  the meta function when the attributes have been added to the node
  (when using an atkMetaNode). [Peter]
+ Added support for passing flags as the third parameter to 
  atkListAttribute. [Peter]
+ Added atkAttribute::nodeInit method which is called from 
  atkNode's init method. [Peter]
* Owner instance is now set in attributes using setOwnerInstance. [Peter]
* Improved ATK test suite output. [Peter]
* Improved default Oracle date format. [Peter]
* When field.focus fails we catch the error so the user doesn't 
  see the error. [Dennis-Jan]
* Some code cleanup for the mysqli driver. [Martin]
* check constraint violations are now seen as user errors by the
  Mysqli driver. [Martin]
* atkTestSuite doesn't display notices anymore. [Peter]
* atkNode::deleteDb now properly checks if there is something to   
  delete or not. [Peter]
* Fixed PHP notices in atkNumberAttribute. [Peter]
* Refactored DB cloning functionality to atkDb class. [Peter]
* A module can now specify it's default fixture path (by 
  implementing getFixturePath). [Peter]* Fixtures are now
  searched for in a subdirectory of the test case if no module 
  or path is specified. [Peter]
* In case of a ML node and physical_delete flag of the atkfileattribute
  the file were delete twice. But the second it generates an error.
  [Dennis-Jan]
* Changed the dispatch.php in the skel to use atkcontroller object. Note,
  the old method ($obj->dispatch) stills works but is deprecated. It is
  recommended to use the new dispatch.php from the skel directory.
  [Lineke]
* Some functional decomposition of atkSaveHandler [Maurice]
* Added the ability to override an actionHandler class in function
  atkNode::callHandler. [Maurice]
* Added notification for trigger events (eg preAdd, postAdd). [Maurice]