@@ -2146,12 +2146,12 @@
 
       $this->m_initialised = true;
       
-      // Call the attributes nodeInit method to doe some last time
+      // Call the attributes postInit method to doe some last time
       // initialization if necessary.
       foreach (array_keys($this->m_attribList) as $attribname)
       {
         $p_attrib = &$this->m_attribList[$attribname];
-        $p_attrib->nodeInit($this);
+        $p_attrib->postInit();
       }
     }
 
